--- a/oppia/templates/oppia/course/quiz-attempts.html
+++ b/oppia/templates/oppia/course/quiz-attempts.html
@@ -2,17 +2,24 @@
 {% load i18n %}
 {% load display_functions %}
 {% block extra_scripts %}
-	<script type="text/javascript">
-		function init(){
-			$('tr[name=attemptlist]').each(function(i){
-				$('#detail'+$(this).attr('id')).toggle();
-				$(this).click(function() {
-					$('#detail'+$(this).attr('id')).toggle("blind", 1000 );
-				});
-				}
-			);
-		}
-	</script>
+<script type="text/javascript">
+    function init(){
+        $('tr[name=attemptlist]').each(function(i){
+            $('#detail'+$(this).attr('id')).toggle();
+            $(this).click(function() {
+                $('#detail'+$(this).attr('id')).toggle("blind", 1000 );
+            });
+
+
+            // Feedback functionality
+            $('.feedback-header').on('click', function() {
+                console.log('clicked');
+            });
+
+            }
+        );
+    }
+</script>
 {% endblock extra_scripts %}
 {% block extra_body %}
 onload="init();"
@@ -41,7 +48,7 @@ onload="init();"
 			<td>{{ a.attempt_date }}</td>
 			<td>{% if OPPIA_SHOW_GRAVATARS %}
        				{{ a.user|gravatar:24 }}
-       			{% endif %} 
+       			{% endif %}
        			{% if request.user.is_staff %}
 					<a href="{% url 'profile_user_activity' a.user.id %}">{{ a.user.first_name }} {{ a.user.last_name }}</a>
 				{% else %}
@@ -57,14 +64,26 @@ onload="init();"
 			                <tr>
 			                  <th>{% trans 'Question' %}</th>
 			                  <th>{% trans 'Response' %}</th>
+                              <!--If there are 'essay' type questions...:-->
+                              <th>{% trans 'Feedback' %}</th>
 			                  <th>{% trans 'Score' %}</th>
 			                </tr>
 			              </thead>
 			              <tbody>
 				{% for r in a.responses %}
 					<tr>
-						<td>{{ r.question.title|title_lang:LANGUAGE_CODE }}</td>
+						<td>
+                            {{ r.question.title|title_lang:LANGUAGE_CODE }}
+                            {% if r.question.type == 'essay' %}
+                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target=".feedback-modal-{{ a.id }}-{{ r.question.id }}">
+                                    {% trans 'Add score / feedback' %}
+                                </button>
+                            {% endif %}
+                        </td>
 						<td>{{ r.text }}</td>
+                            {% if r.question.type == 'essay' %}
+                                <td>Great job</td>
+                            {% endif %}
 						<td>{{ r.get_score_percent }}%</td>
 					</tr>
 			{% endfor %}
@@ -75,11 +94,52 @@ onload="init();"
 	{% endfor %}
 				</tbody>
  		</table>
-	</div> 
+	</div>
 	{% include "oppia/includes/page_navigator.html" %}
 {% else %}
 	<p>{% trans 'No attempts yet' %}</p>
 {% endif %}
 
-
+<!--Modals for adding Feedback and manual score:-->
+{% for a in page.object_list %}
+    {% for r in a.responses %}
+        {% if r.question.type == 'essay' %}
+            <!--Modal's 'identifier' is it's class name: quiz_attempt_id + question_id-->
+            <div class="modal fade feedback-modal-{{ a.id }}-{{ r.question.id }}">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">{{ course.title|title_lang:LANGUAGE_CODE }}</h4>
+                  </div>
+                  <div class="modal-body">
+                    <p><strong>{% trans 'Quiz' %}: </strong>{{ quiz.title|title_lang:LANGUAGE_CODE }}</p>
+                    <p><strong>{% trans 'Question' %}: </strong>?</p>
+                    <p><strong>{% trans 'Completed on' %}: </strong>{{ a.submitted_date }}</p>
+                    <hr>
+                     <table class="table">
+                            <tr>
+                              <th>{% trans 'Question' %}</th>
+                              <td>{{ r.question.title|title_lang:LANGUAGE_CODE }}</td>
+                            </tr>
+                            <tr>
+                              <th>{% trans 'Response' %}</th>
+                              <td>{{ r.text }}</td>
+                            </tr>
+                            <tr>
+                              <th>{% trans 'Feedback' %}</th>
+                              <td>Feedback</td>
+                            </tr>
+                     </table>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+        {% endif %}
+    {% endfor %}
+{% endfor %}
 {% endblock content %}
