--- a/oppia/templates/oppia/course/quiz-attempts.html
+++ b/oppia/templates/oppia/course/quiz-attempts.html
@@ -3,21 +3,13 @@
 {% load display_functions %}
 {% block extra_scripts %}
 <script type="text/javascript">
-    function init(){
-        $('tr[name=attemptlist]').each(function(i){
-            $('#detail'+$(this).attr('id')).toggle();
+    function init() {
+        $('tr[name=attemptlist]').each(function(i) {
+            $('#detail' + $(this).attr('id')).toggle();
             $(this).click(function() {
-                $('#detail'+$(this).attr('id')).toggle("blind", 1000 );
+                $('#detail' + $(this).attr('id')).toggle("blind", 1000);
             });
-
-
-            // Feedback functionality
-            $('.feedback-header').on('click', function() {
-                console.log('clicked');
-            });
-
-            }
-        );
+        });
     }
 </script>
 {% endblock extra_scripts %}
@@ -75,7 +67,7 @@ onload="init();"
 						<td>
                             {{ r.question.title|title_lang:LANGUAGE_CODE }}
                             {% if r.question.type == 'essay' %}
-                                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target=".feedback-modal-{{ a.id }}-{{ r.question.id }}">
+                            <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target=".feedback-modal-{{ r.id }}">
                                     {% trans 'Add score / feedback' %}
                                 </button>
                             {% endif %}
@@ -100,52 +92,62 @@ onload="init();"
 	<p>{% trans 'No attempts yet' %}</p>
 {% endif %}
 
-<!--Modals for adding Feedback and manual score:-->
-{% for a in page.object_list %}
-    {% for r in a.responses %}
-        {% if r.question.type == 'essay' %}
-            <!--Modal's 'identifier' is it's class name: quiz_attempt_id + question_id-->
-            <div class="modal fade feedback-modal-{{ a.id }}-{{ r.question.id }}">
+<!--We are displaying each QuizAttemptResponse's ModelForm in a Bootstrap's modal-->
+<!--here. If question type is 'essay', a button is shown near the question and-->
+<!--this modal can be called.-->
+<form method="post" action="">
+    {% csrf_token %}
+    {{ formset.management_form }}
+    {% for form in formset.forms %}
+    {% with response=form.instance %}
+
+            <!-- Modal -->
+            <div class="modal fade feedback-modal-{{ response.id }}" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
+
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">{{ course.title|title_lang:LANGUAGE_CODE }}</h4>
+                    <h4 class="modal-title" id="myModalLabel">{{ course.title|title_lang:LANGUAGE_CODE }}</h4>
                   </div>
+
                   <div class="modal-body">
                     <p><strong>{% trans 'Quiz' %}: </strong>{{ quiz.title|title_lang:LANGUAGE_CODE }}</p>
-                    <p><strong>{% trans 'Question' %}: </strong>?</p>
-                    <p><strong>{% trans 'Completed on' %}: </strong>{{ a.submitted_date }}</p>
+                    <p><strong>{% trans 'Completed on' %}: </strong>{{ response.quizattempt.submitted_date }}</p>
+                    <p><strong>{% trans 'Max. available score' %}: </strong>{{ response.question.get_maxscore }}</p>
                     <br>
-                     <table class="table">
-                            <tr>
-                              <th>{% trans 'Question' %}</th>
-                              <td>{{ r.question.title|title_lang:LANGUAGE_CODE }}</td>
-                            </tr>
-                            <tr>
-                              <th>{% trans 'Response' %}</th>
-                              <td>{{ r.text }}</td>
-                            </tr>
-                            <tr>
-                              <th>{% trans 'Feedback' %}</th>
-                              <td>
-                                <textarea class="form-control" rows="3" placeholder="Question feedback">{{ r.feedback|default:"" }}</textarea>
-                              </td>
-                            </tr>
-                            <tr>
-                              <th>{% trans 'Score' %}</th>
-                              <td><input class="form-control" type="text" id="formGroupInputSmall" placeholder="Question score" value="{{ r.score }}"></td>
-                            </tr>
-                     </table>
+                    <table class="table">
+                      <tr>
+                        <th>{% trans 'Question' %}</th>
+                        <td>{{ response.question.title }}</td>
+                      </tr>
+                      <tr>
+                        <th>{% trans 'Response' %}</th>
+                        <td>{{ response.text }}</td>
+                      </tr>
+                      {% for field in form %}
+                      <tr>
+                          {% if field.label = 'Id' %}
+                          <th style="visibility: hidden;">{{ field.label }}</th>
+                          {% else %}
+                          <th>{{ field.label }}</th>
+                          {% endif %}
+                          <td>{{ field }}</td>
+                      </tr>
+                      {% endfor %}
+                    </table>
                   </div>
+
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Close' %}</button>
+                    <button type="submit" class="btn btn-primary">{% trans 'Save changes' %}</button>
                   </div>
-                </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-            </div><!-- /.modal -->
-        {% endif %}
+
+                </div> <!--Modal-->
+              </div> <!--Modal-dialog-->
+            </div> <!--Modal-content-->
+    {% endwith %}
     {% endfor %}
-{% endfor %}
+</form>
+
 {% endblock content %}
